# Liu-Takano-Session-Types

./: Cargo.toml  README.md
liu_takano_session_types/: Cargo.toml
liu_takano_session_types/examples/: addoreven.rs  addoreven_sessiontyped.rs  atm_with_idverif.rs  atm_with_idverif_v2.rs  tcp_atm_sessiontyped.rs  tcp_client_sessiontyped.rs  unix_app1.rs  unix_app2.rs
liu_takano_session_types/src/: lib.rs
unix-socket/: Cargo.toml
unix-socket/examples/: atm.rs  client.rs  receivefd.rs  sendfd.rs  server.rs  unixsocket_client.rs  unixsocket_server.rs
unix-socket/src/: lib.rs
