[package]
name = "unix-socket"
version = "0.1.0"
authors = ["Liu and Takano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
nix = "0.19.1"
num = "*"
bincode = "1.1.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
debug = true
opt-level = 3

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "unixsocket_server"
path = "examples/unixsocket_server.rs"

[[example]]
name = "unixsocket_client"
path = "examples/unixsocket_client.rs"

[[example]]
name = "sendfd"
path = "examples/sendfd.rs"

[[example]]
name = "recvfd"
path = "examples/recvfd.rs"

[[example]]
name = "atm"
path = "examples/atm.rs"

